--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,7 +2,7 @@
 
 <ol>
   <% @cocktails.each do |cocktail| %>
-    <li><%= link_to cocktail.name, cocktail_path(cocktail) %> <% cocktail %> <%= cocktail.ingredients %></li>
+    <li><%= link_to cocktail.name, cocktail_path(cocktail) %> </li>
   <% end %>
 </ol>
 
