--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,20 @@
-<h1>Index</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://assets3.thrillist.com/v1/image/1591960/size/tmg-slideshow_l.jpg
+);">
+  <div class="container">
+    <h1>Our <strong>cocktails</strong></h1>
+  </div>
+</div>
 
-<ol>
-  <% @cocktails.each do |cocktail| %>
-    <li><%= link_to cocktail.name, cocktail_path(cocktail) %> </li>
-  <% end %>
-</ol>
+  <div class="container">
+    <ol class="list-index">
+      <% @cocktails.each do |cocktail| %>
+        <li class="cocktail-list-text"><%= link_to cocktail.name, cocktail_path(cocktail) %> </li>
+      <% end %>
+    </ol>
 
-<br><br>
-<%= link_to 'Create cocktail', new_cocktail_path %>
+    <br>
+
+    <%= link_to 'Create cocktail', new_cocktail_path, class: "btn btn-primary"%>
+    <%= link_to 'Back to Boris', root_path, class: "btn btn-secondary"%>
+  </div>
+
