--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,14 +1,17 @@
-<h1>Show</h1>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo, height: 600, width: 2000, crop: :fill %>')">
+  <p><%= @cocktail.name %></p>
+</div>
 
-<%= @cocktail.name %>
+<div class="container">
+  <ul class="list-index">
+    <% @cocktail.doses.each do |dose| %>
+      <%= dose.description %>
+      <%= dose.ingredient.photo %>
+    <% end %>
+  </ul>
 
-<ul>
-  <% @cocktail.doses.each do |dose| %>
-    <%= dose.description %>
-  <% end %>
-</ul>
+  <br>
+  <%= link_to 'New dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary"%>
+  <%= link_to 'All the cocktails', cocktails_path, class: "btn btn-secondary"%>
+</div>
 
-<br><br>
-<%= link_to 'All the cocktails', cocktails_path %>
-<br>
-<%= link_to 'New dose', new_cocktail_dose_path(@cocktail) %>
